Fix overlapping issue relating paragraphs and inflation image

--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ header {
     "par11 par12 par13 par14"
     "im21 im22 im23 im24"
     "par21 par22 par23 par24";
+    grid-column-gap: 10px;
 }
 
 #inflation {
@@ -219,6 +220,10 @@ header {
 
 .bold {
   font-weight: bold;
+}
+
+.inflation-grid-padding {
+  padding-top: 50px;
 }
 
 #par11 {
